<resources>
    <string name="app_name">Blackjack</string>
    <string name="hit">Hit</string>
    <string name="stay">Stay</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="deal">Deal</string>
    <string name="shuffle">Shuffle</string>
    <string name="reset">Reset</string>
    <string name="start_game">Start Game</string>
    <string name="new_game">New Game</string>
    <string name="start">start</string>
    <string name="player_name">Player Name</string>
    <string name="balance">Balance:</string>
    <string name="b_money">1000$</string>
    <string name="c_bet">Current Bet:</string>
    <string name="p_bet">Place A Bet</string>
    <string name="bet">Bet</string>
    <string name="exit_game">Exit Game</string>
    <string name="exit_game_sen">Are you sure do you want to leave the game? </string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="resume">Resume</string>
    <string name="exit">Exit</string>
</resources>
