<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <SurfaceView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/gameview"
        android:layout_alignParentEnd="false"
        android:nestedScrollingEnabled="false" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hit"
        android:background="@drawable/button_intro"
        android:id="@+id/hit"
        android:textSize="18sp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="70dp"
        android:layout_marginBottom="130dp"
        android:textColor="#FFFFFF"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="130dp"
        android:textSize="18sp"
        android:textAlignment="center"
        android:text="@string/stay"

        android:background="@drawable/button_intro"
        android:id="@+id/stay"

        android:textColor="#FFFFFF" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@drawable/bottom_bar"
        android:layout_alignParentBottom="true"
        android:layout_gravity="start|bottom"
        android:layout_height="35dp">


        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/balance_text"
            android:layout_width="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="40dp"
            android:text="@string/balance"
            android:textColor="#FFFFFF"
            android:textSize="18dp"
            android:layout_height="wrap_content" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/bet_text"
            android:layout_width="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="230dp"
            android:text="@string/c_bet"
            android:textColor="#FFFFFF"
            android:textSize="18dp"
            android:layout_height="wrap_content" />

    </RelativeLayout>

</RelativeLayout>
